# pdfscrub

./: CLAUDE.md  Makefile  README.md  pyproject.toml
src/pdfscrub/: cli.py  redact.py  search.py
tests/: test_pdfscrub.py
